[gd_scene load_steps=5 format=3 uid="uid://bcclear6wnecc"]

[ext_resource type="Script" path="res://Scenes/FullScanExplorer.gd" id="1_3n1fl"]
[ext_resource type="Theme" uid="uid://qpjfkm1dnyec" path="res://Resources/baseTheme.tres" id="2_1rx7p"]
[ext_resource type="Script" path="res://PraxisMapper/FullOffline/FullAreaScanner.gd" id="3_caaq3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tswmd"]
bg_color = Color(0.27451, 0, 0.941176, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="FullScanExplorer" type="Node2D"]
script = ExtResource("1_3n1fl")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1080.0
offset_bottom = 1920.0
color = Color(0.0196078, 0.0745098, 0.00392157, 1)

[node name="Label" type="Label" parent="."]
offset_left = 339.0
offset_top = 6.0
offset_right = 697.0
offset_bottom = 33.0
theme = ExtResource("2_1rx7p")
text = "Super Deluxe Scan Explorer Mk2"

[node name="Button" type="Button" parent="."]
offset_left = 387.0
offset_top = 271.0
offset_right = 540.0
offset_bottom = 306.0
scale = Vector2(2, 2)
theme = ExtResource("2_1rx7p")
theme_override_styles/normal = SubResource("StyleBoxFlat_tswmd")
text = "Get Area Info"

[node name="lblCounts" type="Label" parent="."]
offset_left = 670.0
offset_top = 350.0
offset_right = 879.0
offset_bottom = 377.0
theme = ExtResource("2_1rx7p")
text = "Total Place Counts:
"

[node name="Button2" type="Button" parent="."]
offset_left = 998.0
offset_top = 11.0
offset_right = 1066.0
offset_bottom = 46.0
theme = ExtResource("2_1rx7p")
text = "Close"

[node name="FullAreaScanner" type="Node2D" parent="."]
script = ExtResource("3_caaq3")

[node name="Button" type="Button" parent="FullAreaScanner"]
offset_left = 789.0
offset_top = 57.0
offset_right = 1067.0
offset_bottom = 92.0
theme = ExtResource("2_1rx7p")
text = "Switch To Minimum Data"

[node name="SC" type="ScrollContainer" parent="."]
offset_left = 11.0
offset_top = 350.0
offset_right = 629.0
offset_bottom = 1759.0

[node name="VBOX" type="VBoxContainer" parent="SC"]
custom_minimum_size = Vector2(500, 1000)
layout_mode = 2
size_flags_horizontal = 3

[node name="lblResults" type="RichTextLabel" parent="SC/VBOX"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_1rx7p")
bbcode_enabled = true
text = "Named Results:"
fit_content = true

[node name="chkDupes" type="CheckBox" parent="."]
offset_left = 363.0
offset_top = 162.0
offset_right = 647.0
offset_bottom = 197.0
theme = ExtResource("2_1rx7p")
text = "Show Duplicate Names
"

[node name="chkFar" type="CheckBox" parent="."]
offset_left = 282.0
offset_top = 114.0
offset_right = 490.0
offset_bottom = 149.0
theme = ExtResource("2_1rx7p")
text = "Far-scan (3+ distance until item found)
"

[node name="chkVisited" type="CheckBox" parent="."]
offset_left = 783.0
offset_top = 112.0
offset_right = 991.0
offset_bottom = 147.0
theme = ExtResource("2_1rx7p")
text = "Include Visited"

[node name="chkSub" type="CheckBox" parent="."]
visible = false
offset_left = 18.0
offset_top = 116.0
offset_right = 226.0
offset_bottom = 151.0
theme = ExtResource("2_1rx7p")
text = "Only Sub-places"

[node name="optTypes" type="OptionButton" parent="."]
offset_left = 184.0
offset_top = 215.0
offset_right = 435.0
offset_bottom = 250.0
theme = ExtResource("2_1rx7p")

[node name="Label4" type="Label" parent="."]
offset_left = 565.0
offset_top = 217.0
offset_right = 756.0
offset_bottom = 244.0
theme = ExtResource("2_1rx7p")
text = "Specific Distance:"

[node name="optDist" type="OptionButton" parent="."]
offset_left = 772.0
offset_top = 211.0
offset_right = 1023.0
offset_bottom = 246.0
theme = ExtResource("2_1rx7p")
item_count = 10
selected = 0
fit_to_longest_item = false
popup/item_0/text = "0-1 or closest"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 2
popup/item_2/text = "3"
popup/item_2/id = 3
popup/item_3/text = "4"
popup/item_3/id = 4
popup/item_4/text = "5"
popup/item_4/id = 5
popup/item_5/text = "6"
popup/item_5/id = 6
popup/item_6/text = "7"
popup/item_6/id = 7
popup/item_7/text = "8"
popup/item_7/id = 8
popup/item_8/text = "9"
popup/item_8/id = 10
popup/item_9/text = "10"
popup/item_9/id = 10

[node name="Label2" type="Label" parent="."]
offset_left = 53.0
offset_top = 218.0
offset_right = 165.0
offset_bottom = 245.0
theme = ExtResource("2_1rx7p")
text = "Find Type:"

[node name="Label3" type="Label" parent="."]
offset_left = 27.0
offset_top = 52.0
offset_right = 139.0
offset_bottom = 79.0
theme = ExtResource("2_1rx7p")
text = "Scanning: "

[node name="lblArea" type="Label" parent="."]
offset_left = 154.0
offset_top = 52.0
offset_right = 266.0
offset_bottom = 79.0
theme = ExtResource("2_1rx7p")

[connection signal="pressed" from="Button" to="." method="GetAreaInfo"]
[connection signal="pressed" from="Button2" to="." method="Close"]
[connection signal="pressed" from="FullAreaScanner/Button" to="." method="SwitchToMin"]
